--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<html style="background-color: aqua;">
+<html>
+<!--Formatação de textos-->
+<b>Texto em negrito</b>
+<br>
+<strong>Texto importante</strong>
+<br>
+<i>Texto em itálico</i>
+<br>
+<em>Texto enfatizado</em>
+<br>
+<mark>Texto marcado</mark>
+<br>
+<small>Texto pequenino</small>
+<br>
+<del>Texto </del>
 
 
 
-
-<h1>TITULO PRINCIPAL
-
-
-
-<p>Primeiro paragravo do site</p>
-<p>segundo paragravo do site
-    <h2>titulo2</h2>
-</p>
 </html>
