--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <br>
 <small>Texto pequenino</small>
 <br>
-<del>Texto </del>
-
-
+<del>Texto trançado</del>
+<br>
+<u>Texto sublinhado</u>
+<br>
+Log<sub>10</sub>
+<br>
+Base<sup>expoente</sup>
 
 </html>
